fixed week 2
